--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@netsells/nuxt-hotjar": "^0.1.2",
     "@nuxtjs/axios": "^5.12.1",
-    "nuxt": "^2.14.0"
+    "@nuxtjs/proxy": "^2.0.1",
+    "@yabhq/nuxt-hotjar": "^0.2.0",
+    "nuxt": "^2.14.0",
+    "nuxt-facebook-pixel-module": "^1.3.0"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/vuetify": "^1.11.2"
   }
 }
